feat: custom card

--- a/assets/css/partials/_capsules.scss
+++ b/assets/css/partials/_capsules.scss
@@ -1,8 +1,6 @@
 .capsule {
-  font-size: 28px;
   color: white;
-  padding: 15px 25px;
-  margin-right: 10px;
+  padding: 15px;
 }
 
 .danger-capsule {
