fix: showing patient created

--- a/assets/css/components/_sidebar.scss
+++ b/assets/css/components/_sidebar.scss
@@ -10,13 +10,13 @@
 .ant-layout-sider-light {
   box-shadow: 28px rgb(82 63 105 / 8%);
 }
-.dashbaord-menu-box:hover {
+.dashboard-menu-box:hover {
   -webkit-transition: fill 0.3s ease;
   transition: fill 0.3s ease;
   background-image: url('http://portal.sch-demo-atmps.microsysx.com/assets/media/bg/bg-hover-blue.svg');
   background-repeat: no-repeat;
 }
-.dashbaord-box {
+.dashboard-box {
   background-image: url('http://portal.sch-demo-atmps.microsysx.com/assets/media/bg/bg-profile-img.png');
   height: 100px;
   background-repeat: no-repeat;
