--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,5 @@
 @import './partials/variables';
+@import './partials/mixin';
 @import './partials/margin';
 @import './partials/padding';
 @import './partials/grid';
