--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,8 @@
 @import './components/sidebar';
 @import './components/login';
 @import './components/header';
+@import './components/patient-table';
+
 
 body {
   background-color: white;
@@ -31,6 +33,43 @@ body {
 }
 
 .main {
-  padding: 24px;
-  margin-top: 15px;
+  padding: 5px;
+  margin-top: 5px;
+}
+
+.ant-form-item-control input {
+	border-radius: 7px;
+	height: 45px;
+	background: #F8F8F8;
+}
+
+.ant-btn {
+	height: 45px;
+}
+
+.ant-btn-primary{
+	background-color: #2255C2;
+	border-color: #2255C2;
+	&:hover{
+		background-color: #1749b5;
+		border-color: #1749b5;
+	}
+}
+
+.ant-input {
+	&:hover{
+		border-color: #1749b5;
+	}
+	&:focus{
+		border-color: #2255C2;
+		box-shadow: 0 0 0 2px rgb(34, 85, 194, 0.45);
+	}
+}
+
+a {
+	color: $primary-color;
+	&:hover
+	{
+		color: $primary-color;
+	}
 }
