--- a/assets/css/components/_patient-table.scss
+++ b/assets/css/components/_patient-table.scss
@@ -1,141 +1,140 @@
 .ant-table-content {
-    table {
-      border-collapse: separate;
-      border-spacing: 0 1em;
-      text-align: center;
+  table {
+    border-collapse: separate;
+    border-spacing: 0 1em;
+    text-align: center;
+    vertical-align: middle;
+  }
+  table thead tr {
+    border-collapse: collapse;
+    border-style: hidden;
+    box-shadow: 0 0 0 1px #e2e2e2;
+    border-radius: 22px;
+    margin-top: 2rem;
+  }
+  .ant-table-thead tr th {
+    padding: 15px;
+    font-weight: bold;
+    text-align: center;
+    &:first-child {
+      border-bottom-left-radius: 40px;
+      border-top-left-radius: 40px;
+    }
+    &:last-child {
+      border-bottom-right-radius: 40px;
+      border-top-right-radius: 40px;
+    }
+  }
+  .ant-table-tbody tr {
+    border-collapse: collapse;
+    border-style: hidden;
+    box-shadow: 0 0 0 1px #e2e2e2;
+    border-radius: 44px;
+    margin-top: 2rem;
+    &:hover {
+      background: #fff;
+      box-shadow: 0 26px 60px 0 rgb(0 0 0 / 10%);
+      background-color: #fff;
+      background-image: url(http://sch-dev-atmps.microsysx.com/assets/media/Rectangle%20121.png);
+      background-repeat: no-repeat;
+      background-position: left;
+      margin-right: 0 !important;
+      color: #2255c2;
+    }
+    td {
+      padding: 8px;
+      font-size: 14px;
       vertical-align: middle;
-    }
-    table thead tr{
-      border-collapse: collapse;
-      border-style: hidden;
-      box-shadow: 0 0 0 1px #e2e2e2;
-      border-radius: 22px;
-      margin-top: 2rem;
-    }
-    .ant-table-thead tr th {
-      padding: 15px;
-      font-weight: bold;
-      text-align: center;
-      &:first-child {
+      color: #233151;
+      font-weight: 400;
+      &:first-child,&:last-child  {
         border-bottom-left-radius: 40px;
         border-top-left-radius: 40px;
       }
-      &:last-child {
-        border-bottom-right-radius: 40px;
-        border-top-right-radius: 40px;
-      }
+      
     }
-    .ant-table-tbody tr {
-      border-collapse: collapse;
-      border-style: hidden;
-      box-shadow: 0 0 0 1px #e2e2e2;
-      border-radius: 44px;
-      margin-top: 2rem;
-      &:hover{
-        background: #fff;
-        box-shadow: 0 26px 60px 0 rgb(0 0 0 / 10%);
-        background-color: #fff;
-        background-image: url(http://sch-dev-atmps.microsysx.com/assets/media/Rectangle%20121.png);
-        background-repeat: no-repeat;
-        background-position: left;
-        margin-right: 0 !important;
-        color: #2255c2;
-      }
-      td{
-        padding: 8px;
-        font-size: 14px;
-        vertical-align: middle;
-        color: #233151;
-        font-weight: 400;
-        &:first-child{
-          border-bottom-left-radius: 40px;
-          border-top-left-radius: 40px;
-        }
-        &:last-child {
-          border-bottom-right-radius: 40px;
-          border-top-right-radius: 40px;
-        }
-      }
+  }
+}
+.ant-table-tbody
+  > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
+  > td {
+  background: none;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  &:not(:disabled):not(.disabled) {
+    cursor: pointer;
+  }
+}
+
+.patient-timeline {
+  text-align: right;
+
+  a.btn {
+    padding: 4px 8px;
+    border: 0;
+    font-size: 12px;
+    color: #233151;
+    border-radius: 22px;
+  }
+  a.btn-timeline-success {
+    background-color: #d1f2dc;
+    &::before {
+      content: '';
+      background-size: 100%;
+      height: 28px;
+      width: 28px;
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 5px;
+      background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle-background.svg');
     }
-
   }
-  .ant-table-tbody > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected) > td {
-    background: none;
-  }
-
-  .btn {
+  .sep-line,
+  .sep-line-success,
+  .sep-line-disabled {
+    max-width: 20px;
+    width: 100%;
+    height: 1px;
     display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
     vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    &:not(:disabled):not(.disabled){
-      cursor: pointer;
-    }
   }
-
-  .patient-timeline 
-  {
-    text-align: right;
-
-    a.btn {
-      padding: 4px 8px;
-      border: 0;
-      font-size: 12px;
-      color: #233151;
-      border-radius: 22px;
-    }
-    a.btn-timeline-success {
-      background-color: #d1f2dc;
-      &::before{
-        content: "";
-        background-size: 100%;
-        height: 28px;
-        width: 28px;
-        display: inline-block;
-        vertical-align: middle;
-        margin-right: 5px;
-        background-image: url("https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle-background.svg");
-      }
-    }
-    .sep-line, .sep-line-success, .sep-line-disabled  {
-      max-width: 20px;
-      width: 100%;
-      height: 1px;
+  .sep-line-success {
+    background-color: #1bb558;
+  }
+  .sep-line-disabled {
+    background-color: #bebfcb;
+  }
+  .btn-outline-secondary {
+    color: #6c757d;
+    background-image: none;
+    border-color: #6c757d;
+    background-color: #fbfbfb;
+    &::before {
+      margin-right: 5px;
+      background-image: url('https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg');
+      content: '';
+      background-size: 28px;
+      height: 28px;
+      width: 28px;
       display: inline-block;
       vertical-align: middle;
     }
-    .sep-line-success{
-      background-color: #1bb558;
-    }
-    .sep-line-disabled{
-      background-color: #bebfcb;
-    }
-    .btn-outline-secondary {
-      color: #6c757d;
-      background-image: none;
-      border-color: #6c757d;
-      background-color:  #fbfbfb;
-      &::before{
-        margin-right: 5px;
-        background-image: url("https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg");
-        content: "";
-        background-size: 28px;
-        height: 28px;
-        width: 28px;
-        display: inline-block;
-        vertical-align: middle;
-      }
-    }
-
   }
+}
