--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -22,6 +22,7 @@
     float: left;
     vertical-align: middle;
     margin-top: 16px;
+    min-width: 80px;
   }
   .step-col {
     display: inline-block;
