--- a/assets/css/partials/_border.scss
+++ b/assets/css/partials/_border.scss
@@ -3,3 +3,6 @@ $large-radius: 44px;
 .default-border-radius {
   border-radius: $default-radius;
 }
+.large-border-radius {
+  border-radius: $large-radius;
+}
