--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,6 +10,7 @@
 @import './partials/capsules';
 @import './partials/modal';
 @import './partials/formsFields';
+@import './partials/tabs';
 @import './partials/_steps';
 @import './components/sidebar';
 @import './components/login';
@@ -40,7 +41,8 @@ body {
 }
 
 .ant-btn {
-  height: 45px;
+  height: 50px;
+  border-radius: 22px;
 }
 
 .ant-btn-primary {
@@ -60,12 +62,42 @@ a {
 	}
 }
 
-.grey-card{
-  background-color: #f9f9f9;
-  font-size: 14px;
-  font-weight: bold;
-  border-radius: 44px;
-  .ant-card{
-    box-shadow: 0 26px 120px rgb(0 0 0 / 4%);
+.square-table .ant-table-content {
+  table {
+    border-collapse: separate;
+    text-align: center;
+    vertical-align: middle;
+  }
+  table thead tr {
+    border-collapse: collapse;
+    border-style: hidden;
+    border-radius: 22px;
+  }
+  .ant-table-thead tr th {
+    border:unset;
+    padding: 15px;
+    font-weight: bold;
+    text-align: center;
+    &:first-child {
+      border-bottom-left-radius: 40px;
+      border-top-left-radius: 40px;
+    }
+    &:last-child {
+      border-bottom-right-radius: 40px;
+      border-top-right-radius: 40px;
+    }
+  }
+}
+
+.ant-form-vertical .ant-form-item { 
+  padding-bottom: unset;
+  margin-bottom: unset;
+}
+
+.square-table .ant-table-tbody {
+  tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected){
+    td{
+      background: #fff;
+    }
   }
 }
