style: designed schedule form as of v1

--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -1,5 +1,8 @@
 .enrollment-page {
-  margin-left:45px; margin-right:45px;margin-top:20px;
+  margin-left:45px; 
+  margin-right:45px;
+  margin-top:20px;
+  
   .ant-tabs .ant-tabs-left-content {
     border-left: unset;
   }
