--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@
 @import './components/header';
 @import './components/patient-table';
 @import './components/home';
+@import './components/enrollment';
 
 body {
   background-color: white;
