--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -1,6 +1,7 @@
 .ant-input,
 .ant-select-selection,
-.ant-time-picker-input {
+.ant-time-picker-input,
+.ant-input-number {
   border-radius: $default-radius;
 }
 
@@ -12,6 +13,10 @@
     border: 0;
     font-size: 16px;
     height: 55px;
+    font-weight: 500;
+  }
+  .ant-input-number{
+    height: 57px;
     font-weight: 500;
   }
 }
