--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
 @import './partials/modal';
 @import './partials/formsFields';
 @import './partials/tabs';
+@import './partials/buttons';
 @import './partials/_steps';
 @import './components/sidebar';
 @import './components/login';
@@ -18,6 +19,8 @@
 @import './components/patient-table';
 @import './components/home';
 @import './components/enrollment';
+@import './components/patient-details';
+
 
 body {
   background-color: white;
@@ -38,20 +41,6 @@ body {
 .main {
   padding: 5px;
   margin-top: 5px;
-}
-
-.ant-btn {
-  height: 50px;
-  border-radius: 22px;
-}
-
-.ant-btn-primary {
-  background-color: #2255c2;
-  border-color: #2255c2;
-  &:hover {
-    background-color: #1749b5;
-    border-color: #1749b5;
-  }
 }
 
 a {
@@ -100,4 +89,11 @@ a {
       background: #fff;
     }
   }
+}
+.page-title{
+  font-size: 25px;
+  font-weight: 600;
+}
+.heading {
+  font-size : 25px;
 }
