style: design support and labeling pages

--- a/assets/css/partials/_buttons.scss
+++ b/assets/css/partials/_buttons.scss
@@ -10,4 +10,8 @@
     background-color: #1749b5;
     border-color: #1749b5;
   }
+  &:focus {
+    background-color: #1749b5;
+    border-color: #1749b5;
+  }
 }
