--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@
 @import './components/login';
 @import './components/header';
 @import './components/patient-table';
+@import './components/labels';
 @import './components/home';
 @import './components/enrollment';
 @import './components/patient-details';
