--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -9,3 +9,12 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.plr-20 {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.p-10{
+  padding: 10px;
+}
