style: add chat screen

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@
 @import './components/patient-table';
 @import './components/labels';
 @import './components/home';
+@import './components/chat';
 @import './components/enrollment';
 @import './components/patient-details';
 
