fix: fixed the font issue on home tabs

--- a/assets/css/components/_home.scss
+++ b/assets/css/components/_home.scss
@@ -41,7 +41,7 @@
       }
     }
   
-    .heading {
+    .heading-home {
       display: inline-flex;
       flex-flow: column;
       vertical-align: middle;
