--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -22,6 +22,7 @@
 @import './components/home';
 @import './components/chat';
 @import './components/enrollment';
+@import './components/admin';
 @import './components/patient-details';
 
 
