--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -13,11 +13,12 @@
     border: 0;
     font-size: 16px;
     height: 55px;
-    font-weight: 500;
+    font-weight: 400;
+    color: #495057;
   }
   .ant-input-number{
     height: 57px;
-    font-weight: 500;
+    font-weight: 400;
   }
 }
 
