--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -10,6 +10,8 @@ header.ant-layout-header {
   }
   .user-detail {
     float: left;
+    font-size: 1.15em;
+    font-weight: 500;
   }
   .hospital-detail {
     float: right;
