style: font popins, fontsize, home page and patient page style completed

--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -10,8 +10,9 @@ header.ant-layout-header {
   }
   .user-detail {
     float: left;
-    font-size: 1.15em;
-    font-weight: 500;
+    font-size: 1.12em;
+    font-weight: 400;
+    color: #212529;
   }
   .hospital-detail {
     float: right;
