--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -14,14 +14,18 @@
   display: none;
 }
 
-.float-right {
-  float: right;
-}
-
 .text-muted {
   color: #6c757d;
 }
 
 .h-100 {
     height: 100%;
+}
+
+.float-right{
+	float:right;
+}
+
+.float-left{
+	float:left;
 }
