--- a/assets/css/partials/_padding.scss
+++ b/assets/css/partials/_padding.scss
@@ -18,3 +18,14 @@
 .p-10{
   padding: 10px;
 }
+
+p-0{
+	padding: 0 !important;
+}
+.pl-5 {
+    padding-left: 3rem !important;
+}
+
+.pr-5{
+	padding-right: 3rem !important;
+}
