--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -1,15 +1,13 @@
 .treatment-steps {
-  .ant-steps-item {
-    border-radius: 20px;
-    padding: 4px;
+  .ant-steps-item{
+    padding: 5px 2px;
+    border: 0;
+    font-size: 12px;
     color: #233151;
+    border-radius: 22px;
+    cursor: pointer;
   }
-  .ant-steps-item-finish {
-    background: #d1f2dc;
-  }
-  .ant-steps-item-active {
-    background-color: #f2f5fb;
-  }
+ 
   .ant-steps-item-wait {
     background-color: #f9f9f9;
   }
@@ -19,13 +17,95 @@
   }
 
   .treatment-name-col {
-    float: left;
     vertical-align: middle;
     margin-top: 16px;
     min-width: 80px;
+    font-size: 11px;
   }
   .step-col {
-    display: inline-block;
-    max-width: 650px;
+    display: flex;
+    max-width: 700px;
+    align-items: flex-start;
+    justify-content: space-around;
   }
+  .ant-steps-small .ant-steps-item-title{
+    font-size: 1em;
+    &::after{
+      display:none;
+    }
+  }
+
+  .ant-steps-item-icon{
+    display: none;
+  }
+  .sep-line{
+    &::after{
+      margin-top: 16px;
+      display: inline-block;
+      height: 1px;
+      background: #e8e8e8;
+      content: '';
+      width: 10px;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+  .sep-line-default {
+    &::after{
+      background-color: #BEBFCB;
+    }
+  }
+  .sep-line-active {
+    &::after{
+      background-color: #1890ff;
+    }
+  }
+  .ant-steps-small.ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item{
+    margin-right: 0;
+  }
+  .ant-steps-item-content {
+    .ant-steps-item-title{
+      color: #233151 !important;
+    }
+    &::before{
+      content: "";
+      height: 20px;
+      width: 20px;
+      margin-right: 5px;
+      display: inline-block;
+      vertical-align: middle;
+      background-size: 100%;
+      background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle.svg);
+    }
+  }
+
+  .ant-steps-item-finish {
+    background: #d1f2dc;
+    .ant-steps-item-content{
+      &::before{
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle-background.svg);
+      }
+    }
+  }
+  .ant-steps-item-active {
+    background-color: #F2F5FB;
+    .ant-steps-item-content{
+      &::before{
+        background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
+      }
+    }
+  }
+
+  .btn-view-timeline{
+    background-color: #3869d1;
+    color: white;
+    border-radius: 22%;
+    margin-left: 10px;
+    display: inline-block;
+    height: 30px;
+    font-size: 12px;
+    margin-top: 12px;
+  }
+
+
 }
