--- a/assets/css/components/_enrollment.scss
+++ b/assets/css/components/_enrollment.scss
@@ -164,5 +164,17 @@
     }
   }
 
+  .empty-message{
+    color: #383d41;
+    font-size: 14px;
+    font-weight: bold;
+    margin-top: 0.5rem;
+    background-color: #e2e3e5;
+    border-color: #d6d8db;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+  }
   
 }
