--- a/assets/css/components/_patient-page.scss
+++ b/assets/css/components/_patient-page.scss
@@ -68,4 +68,14 @@
   div::-webkit-scrollbar-button {
     display:none;
   }
+
+  .treatment-status-col{
+    .ant-table-header-column{
+      width: 100%;
+    }
+    .treatment-title {
+      display: inline-block;
+      width: 49%;
+    }
+  }
 }
