--- a/assets/css/partials/_helpers.scss
+++ b/assets/css/partials/_helpers.scss
@@ -6,6 +6,10 @@
   text-align: right;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-capitalize {
   text-transform: capitalize;
 }
@@ -55,4 +59,3 @@
 .status-cancelled {
 	background-color: #ff8361;
 }
-
