style: changes in enrollment form

--- a/assets/css/partials/_formsFields.scss
+++ b/assets/css/partials/_formsFields.scss
@@ -67,3 +67,18 @@
     font-size: 16px;
   }
 }
+
+.ant-form-item-required {
+
+  &::before{
+    display: none;
+  }
+  &::after{
+    display: inline-block;
+    margin-right: 4px;
+    color: #f5222d;
+    font-size: 14px;
+    line-height: 1;
+    content: '*';
+  }
+}
