fix: minor remove element

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -95,8 +95,8 @@ a {
 }
 
 .ant-form-vertical .ant-form-item { 
-  padding-bottom: unset;
-  margin-bottom: unset;
+  // padding-bottom: unset;
+  // margin-bottom: unset;
 }
 
 .square-table .ant-table-tbody {
