--- a/assets/css/partials/_variables.scss
+++ b/assets/css/partials/_variables.scss
@@ -2,3 +2,16 @@ $grey: #ececec;
 $secondary-color: #fbfbfb;
 $primary-color: #2255c2;
 $danger: #fa6363;
+
+.error-notification {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  .ant-notification-notice-message {
+    color: $danger;
+    font-weight: bold;
+  }
+  .ant-notification-close-x {
+    color: white;
+    font-weight: bold;
+  }
+}
