feat: shipment pickupdetail showing

--- a/assets/css/partials/_variables.scss
+++ b/assets/css/partials/_variables.scss
@@ -2,6 +2,7 @@ $grey: #ececec;
 $secondary-color: #fbfbfb;
 $primary-color: #2255c2;
 $danger: #fa6363;
+$success: #28a745;
 
 .error-notification {
   background-color: rgba(0, 0, 0, 0.8);
