--- a/assets/css/partials/_steps.scss
+++ b/assets/css/partials/_steps.scss
@@ -1,6 +1,5 @@
 .treatment-steps {
-
-  .ant-steps-item{
+  .ant-steps-item {
     padding: 5px 2px;
     border: 0;
     font-size: 12px;
@@ -8,7 +7,7 @@
     border-radius: 22px;
     cursor: pointer;
   }
- 
+
   .ant-steps-item-wait {
     background-color: #f9f9f9;
   }
@@ -26,18 +25,18 @@
   .step-col {
     display: inline-flex;
   }
-  .ant-steps-small .ant-steps-item-title{
+  .ant-steps-small .ant-steps-item-title {
     font-size: 1em;
-    &::after{
-      display:none;
+    &::after {
+      display: none;
     }
   }
 
-  .ant-steps-item-icon{
+  .ant-steps-item-icon {
     display: none;
   }
-  .sep-line{
-    &::after{
+  .sep-line {
+    &::after {
       margin-top: 16px;
       display: inline-block;
       height: 1px;
@@ -49,24 +48,25 @@
     }
   }
   .sep-line-default {
-    &::after{
-      background-color: #BEBFCB;
+    &::after {
+      background-color: #bebfcb;
     }
   }
   .sep-line-active {
-    &::after{
+    &::after {
       background-color: #1890ff;
     }
   }
-  .ant-steps-small.ant-steps-horizontal:not(.ant-steps-label-vertical) .ant-steps-item{
-    margin-right: 0;
+  .ant-steps-small.ant-steps-horizontal:not(.ant-steps-label-vertical)
+    .ant-steps-item {
+    // margin-right: 0;
   }
   .ant-steps-item-content {
-    .ant-steps-item-title{
+    .ant-steps-item-title {
       color: #233151 !important;
     }
-    &::before{
-      content: "";
+    &::before {
+      content: '';
       height: 20px;
       width: 20px;
       margin-right: 5px;
@@ -79,22 +79,22 @@
 
   .ant-steps-item-finish {
     background: #d1f2dc;
-    .ant-steps-item-content{
-      &::before{
+    .ant-steps-item-content {
+      &::before {
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/status-done-circle-background.svg);
       }
     }
   }
   .ant-steps-item-active {
-    background-color: #F2F5FB;
-    .ant-steps-item-content{
-      &::before{
+    background-color: #f2f5fb;
+    .ant-steps-item-content {
+      &::before {
         background-image: url(https://cgt-dev-ft.microsysx.com/images/v2/icons/circle-active.svg);
       }
     }
   }
 
-  .btn-view-timeline{
+  .btn-view-timeline {
     background-color: #3869d1;
     color: white;
     border-radius: 22%;
@@ -104,6 +104,4 @@
     font-size: 12px;
     margin-top: 12px;
   }
-
-
 }
