--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,7 @@
 @import './partials/buttons';
 @import './partials/tables';
 @import './partials/_steps';
+@import './partials/calendar';
 @import './components/sidebar';
 @import './components/login';
 @import './components/header';
