--- a/assets/css/components/_chat.scss
+++ b/assets/css/components/_chat.scss
@@ -62,7 +62,12 @@
       color: rgba(35, 49, 81, 0.6);
       font-size: 10px;
     }
-    .ant-list-items {
+    // .ant-list-items {
+    //   margin-bottom: 20px;
+    //   overflow-y: auto;
+    //   max-height: 400px;
+    // }
+    .peer-to-peer-chat-list {
       margin-bottom: 20px;
       overflow-y: auto;
       max-height: 400px;
@@ -75,8 +80,7 @@
   }
 }
 
-
-.chat--listing-container{
+.chat--listing-container {
   height: calc(100vh - 200px);
   overflow-y: scroll;
 }
